resources/styles.css
p {
    font-size: 20px;
    font-family: "Noto Sans Mono", monospace;
    font-weight: 200;
    
    display: block;
  
}

a {
    font-family: "Noto Sans Mono", monospace;
    font-weight: 200;
    
}
img {
    max-height: 50%;
    max-width: fit-content;
    
}
div.col-4.ms-5 {
    max-height: 75vh;
    max-width: fit-content;
}
#codeContainer, #designContainer {
    width: 100%;
    border: 1px solid #003740;
    flex-wrap: wrap;
    margin-bottom: 40px;
    padding: 10px;
    max-height: 650px;
    overflow: scroll;
}
h2 {
    font-size: 25px;
    font-family: "Noto Sans Mono", monospace;
    font-weight: 200;
   
   
}

h1 {
    font-size: 30px;
    font-family: "Noto Sans Mono", monospace;
    font-weight: 200;
   
   
}
a.nav-link, a.dropdown-item {
    font-family: "Noto Sans Mono", monospace;
    font-weight: 200;
    

}

div.dropdown-menu.show {
    background-color: transparent;
    border-style: none;
}
/*

.show {
    display: flex !important;
    justify-content: end !important; 
}
div#navbarNavDropdown {
    display: flex !important;
    justify-content: end !important;
}
.collapse:not(.show) {
    display: none !important;
}
*/

#carouselDesign1, #carouselDesign2, #carouselDesign3, #carouselDesign4, #carouselDesign5, #carouselDesign6, #carouselDesign7 {
    width: 100%;
    height: auto;
    
}
#design_description {
    width: 100%;
    padding: 20px;
}

a.icon-link.link-underline.link-underline-opacity-0 {
    font-size: 23px;
}

#designPage, #codePage {
    padding: 100px;
}

.navbar {
    --bs-navbar-toggler-border-color: none;
    --bs-navbar-active-color: none;
    --bs-navbar-color: none;
}

.greenColor {
    background-color: #003740 !important;
    color:#FAF4E8 !important;
    border-color: #FAF4E8 !important;
}

.whiteColor {
    background-color: #FAF4E8 !important;
    color:#003740 !important;
    border-color:#003740 !important;
}

@media (max-width: 800px) {
    .flex-row {
        flex-direction: column-reverse !important;
    }
    #design_description {
        width: 100%;
    }
    #designPage, #codePage {
        padding: 30px;
    }
}

